<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.FormTaskFragment">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/appBarLayout">

        <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cor_default">

            <TextView
                    android:id="@+id/toolBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/new_task">

            </TextView>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:padding="16dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/task"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:id="@+id/textView">

            </TextView>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit"
                    android:padding="14dp"
                    android:textSize="14sp"
                    android:hint="@string/new_login_form_hint"
                    android:id="@+id/editText" app:layout_constraintTop_toBottomOf="@+id/textView"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">
            </EditText>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/status"
                    android:id="@+id/statusText"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/editText">

            </TextView>

            <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/statusText"
                    app:layout_constraintStart_toStartOf="parent">

                <RadioButton
                        android:id="@+id/rbTodo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:buttonTint="@color/white"
                        android:text="@string/todo"
                        android:textColor="@color/white"/>

                <RadioButton
                        android:id="@+id/rbDoing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/white"
                        android:text="@string/doing"
                        android:textColor="@color/white"/>

                <RadioButton
                        android:id="@+id/rbDone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/white"
                        android:text="@string/done"
                        android:textColor="@color/white"/>

            </RadioGroup>

            <Button
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_button"
                    android:text="@string/save"
                    android:layout_marginTop="16dp"
                    android:textAllCaps="false"
                    android:textColor="@color/cor_default"
                    app:backgroundTint="@null"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
            <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateTint="@color/white"
                    android:visibility="invisible"
                    android:layout_marginTop="8dp"
                    tools:visibility="visible"
                    app:layout_constraintTop_toBottomOf="@+id/btnSave" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>